# callisto

./: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
debian/: README.Debian  callisto.cfg  changelog  control  copyright  examples  frq00005.cfg  ftpupload.pl  rules  scheduler.cfg  watch
man/: Makefile.am  Makefile.in  callisto-sunschedule.1  callisto.1
src/: Makefile.am  Makefile.in  callisto-sunschedule  callisto.c  callisto.h  conf.c  conf.h  eeprom.c  eeprom.h  fits.c  fits.h  log.c  log.h  serial.c  serial.h  server.c  server.h  util.c  util.h
